Ajustando data de periodo de prova

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Agendamento de Provas</title>
+  <title>Agendamento de Provas-EXAME</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -12,7 +12,7 @@
     <div class="header-unip">
       <img src="assets/img/logo.png" alt="Logo UNIP" class="logo-unip" />
       <h2>POLO BENJAMIN CONSTANT</h2>
-      <h2>PROVA DO DIA 24 A 29 DE NOVEMBRO</h2>
+      <h2>PROVA DO DIA 08 A 13 DE DEZEMBRO</h2>
     </div>
 
     <div id="timerContainer">
@@ -25,7 +25,6 @@
     </div>
     <p id="status-agendamento" class="status-msg"></p>
 </div>
-
 
     <label>Nome Completo*</label>
     <input type="text" id="nome" placeholder="Digite o Nome Completo" />
@@ -125,4 +124,5 @@
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
 
